# desklings

./: .gitignore
.github/workflows/: publish.yml
apps/app/: components.json  index.html  package-lock.json  package.json  settings.html  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/app/src/: App.vue  main.ts  styles.css
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json  settings.json
apps/app/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
apps/app/src-tauri/src/config/: compile.rs  compiled.rs  condition.rs  live.rs  loader.rs  mod.rs  schema.rs  settings.rs
apps/app/src-tauri/src/deskling/: animator.rs  falling.rs  hitmask.rs  mod.rs  monitors.rs  mover.rs  state.rs  state_machine.rs
apps/app/src-tauri/src/input/: arbiter.rs  drag.rs  mod.rs  mouse.rs
apps/app/src-tauri/src/runtime/: event.rs  mod.rs  ticker.rs
apps/app/src/components/ui/badge/: Badge.vue
apps/app/src/components/ui/button/: Button.vue
apps/app/src/components/ui/card/: Card.vue  CardAction.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue
apps/app/src/components/ui/input/: Input.vue
apps/app/src/components/ui/label/: Label.vue
apps/app/src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
apps/app/src/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
apps/app/src/components/ui/slider/: Slider.vue
apps/app/src/components/ui/switch/: Switch.vue
apps/app/src/composables/: useTheme.ts
apps/app/src/settings/: api.ts  main.ts  pages.ts
apps/app/src/settings/framework/: FieldRenderer.vue  FieldShell.vue  SectionRenderer.vue  SettingsRenderer.vue  fieldRegistry.ts  types.ts  useFieldBinding.ts
apps/app/src/settings/shell/: SettingsApp.vue  SettingsSidebar.vue
apps/web/: nuxt.config.ts  package.json
(+9 files in other folders)
