[package]
name = "desklings"
version = "0.1.0"
description = "A little pet on your desktop to torture"
authors = ["aiomayo"]
homepage = "https://desklings.app"
edition = "2021"
rust-version = "1.80"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
or_fun_call = "allow"
redundant_clone = "allow"
assigning_clones = "allow"
wildcard_enum_match_arm = "allow"
format_push_string = "allow"
redundant_locals = "allow"
suboptimal_flops = "allow"

[lib]
name = "desklings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fastrand = "2"
mouce = "0.3.0"
mouse_position = "0.1.4"
arc-swap = "1"
notify = "7"
png = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
